parser/src/snapshots/rustpython_parser__string__tests__parse_string_concat.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 16,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 16,
                        },
                    ),
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "Hello world",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
