parser/src/snapshots/rustpython_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..20,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..20,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "Hello, world!",
                            ),
                            kind: Some(
                                "u",
                            ),
                        },
                    ),
                },
            },
        ),
    },
]
