parser/src/snapshots/rustpython_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..18,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..18,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    range: 0..18,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: Some(
                                                "u",
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
