parser/src/snapshots/rustpython_parser__string__tests__parse_u_string_concat_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..17,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..17,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "Hello world",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
