parser/src/snapshots/rustpython_parser__string__tests__raw_byte_literal_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 8,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 8,
                        },
                    ),
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Bytes(
                                [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
