parser/src/snapshots/rustpython_parser__string__tests__raw_fstring.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 7,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 7,
                        },
                    ),
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 0,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 7,
                                        },
                                    ),
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Located {
                                                location: Location {
                                                    row: 1,
                                                    column: 4,
                                                },
                                                end_location: Some(
                                                    Location {
                                                        row: 1,
                                                        column: 5,
                                                    },
                                                ),
                                                custom: (),
                                                node: Name(
                                                    ExprName {
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                            conversion: 0,
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
