parser/src/snapshots/rustpython_parser__string__tests__triple_quoted_raw_fstring.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..11,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..11,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Located {
                                    range: 0..11,
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Located {
                                                range: 6..7,
                                                custom: (),
                                                node: Name(
                                                    ExprName {
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                            conversion: 0,
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
